--- a/css/styles.css
+++ b/css/styles.css
@@ -10174,7 +10174,7 @@ img::-moz-selection {
 }
 
 .slides{
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -10182,6 +10182,8 @@ img::-moz-selection {
   justify-content: center;
   padding-left: 5%;
   padding-right: 50%;
+  position: relative;
+  overflow: hidden;
 }
 
 .slide1::before{
@@ -10206,6 +10208,10 @@ img::-moz-selection {
 }
 
 .slide2 .row{
+  width: 100%;
+}
+
+.slide2 .row .col-12 img{
   width: 100%;
 }
 
@@ -10344,7 +10350,8 @@ header.masthead .masthead-heading {
 
 .tel-portada {
   position: absolute;
-  bottom: 0%;
+  bottom: 0;
+  left:0;
   color: #23a8cc;
   width: 100%;
   display: flex;
@@ -10374,9 +10381,8 @@ header.masthead .masthead-heading {
 #portfolio{
   padding: 0px;
   position: relative;
-  height: 100vh;
+  height: auto;
   width: 100%;
-  overflow: hidden;
 }
 #portfolio.portafolio-productos{
   height: auto;
@@ -10384,8 +10390,8 @@ header.masthead .masthead-heading {
 #portfolio::after{
   content: '';
   position: absolute;
-  width: 100vw;
-  height: 21%;
+  width: 100%;
+  height: 11%;
   display: block;
   margin: auto;
   bottom: 0;
